--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
 			background: url(./images/2.png) no-repeat;
 			background-size: cover;
 		}
+		
+		.bg-two p {
 
+			top: 12%;
+			color: pink;
+
+		}
 		.show {
 			display: block;
 		}
